@@ -1,3 +1,7 @@
+2021-10-20
+
+  * The Duel and Lonely Mountain: allow changing civs, fix warnings
+
 2021-10-16
 
   * Add more TeamPlacement options to Mainland and African Plains:
